--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vueuse/integrations": "^10.11.1",
     "axios": "^1.13.2",
     "dexie": "^3.2.7",
+    "es-toolkit": "^1.42.0",
     "fuse.js": "^6.6.2",
     "highlight.js": "^11.11.1",
     "idb-keyval": "^6.2.2",
