--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.57.0",
+    "@imengyu/vue3-context-menu": "^1.5.2",
     "@json2csv/plainjs": "^6.1.3",
     "@vueuse/core": "^9.13.0",
     "@vueuse/integrations": "^10.11.1",
