--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "build:edge": "vue-tsc --noEmit && vite build --mode=edge",
     "build:chrome": "vue-tsc --noEmit && vite build --mode=chrome",
     "build:firefox": "vue-tsc --noEmit && vite build --mode=firefox",
-    "preview": "vite preview"
+    "build:tauri": "vue-tsc --noEmit && vite build --mode=tauri",
+    "preview": "vite preview",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.57.0",
     "@imengyu/vue3-context-menu": "^1.5.2",
     "@json2csv/plainjs": "^6.1.3",
+    "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-http": "~2.5.4",
     "@vueuse/core": "^9.13.0",
     "@vueuse/integrations": "^10.11.1",
     "axios": "^1.13.2",
@@ -56,6 +61,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.9.6",
     "@tdesign-vue-next/auto-import-resolver": "^0.1.4",
     "@types/js-yaml": "^4.0.9",
     "@types/json-bigint": "^1.0.4",
