feat(i18n): 添加德语和日语本地化支持
- 在 LocalNameEnum 中新增 KEY_LOCAL 枚举值
- 添加德语翻译文件，包含常见操作、错误提示、主题设置等完整 UI 文本
- 添加日语翻译文件，涵盖菜单、错误信息、开发工具等相关内容
- 德语文件中增加大量模块文本，如首页、数据导出、版本管理等
- 日语文件中补充了主页、索引管理、开发者工具等界面文本
- 统一优化多语言文本结构，提高国际化支持完整性

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2.9.6",
     "@tdesign-vue-next/auto-import-resolver": "^0.1.4",
+    "@types/chrome": "^0.1.32",
     "@types/js-yaml": "^4.0.9",
     "@types/json-bigint": "^1.0.4",
     "@types/json2csv__plainjs": "^6.1.4",
