--- a/src-edge/manifest.json
+++ b/src-edge/manifest.json
@@ -1,25 +1,26 @@
 {
-    "manifest_version": 3,
-    "name": "es-client",
-    "version": "3.2.1",
-    "description": "elasticsearch管理客户端",
-    "content_security_policy": {
-    },
-    "icons": {
-        "96": "icons/logo_200.png",
-        "128": "icons/logo_200.png"
-    },
-    "action": {
-        "default_title": "es-client",
-        "default_icon": "icons/logo_200.png"
-    },
-    "background": {
-        "service_worker": "src/background.js",
-        "type": "module"
-    },
-    "permissions": [
-    ],
-    "host_permissions": [
-        "*://*/"
-    ]
+  "manifest_version": 3,
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
+  "default_locale": "en",
+  "version": "3.2.1",
+  "content_security_policy": {
+  },
+  "icons": {
+    "96": "icons/logo_200.png",
+    "128": "icons/logo_200.png"
+  },
+  "action": {
+    "default_title": "es-client",
+    "default_icon": "icons/logo_200.png"
+  },
+  "background": {
+    "service_worker": "src/background.js",
+    "type": "module"
+  },
+  "permissions": [
+  ],
+  "host_permissions": [
+    "*://*/"
+  ]
 }
