--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@json2csv/plainjs": "^6.1.3",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-http": "~2.5.4",
+    "@tauri-apps/plugin-process": "~2.3.1",
+    "@tauri-apps/plugin-updater": "~2.9.0",
     "@vueuse/core": "^9.13.0",
     "@vueuse/integrations": "^10.11.1",
     "axios": "^1.13.2",
