--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+name = "es-client"
+version = "3.2.2"
+description = "elasticsearch gui client"
+authors = ["落雨不悔"]
+license = "Apache-2.0"
+repository = "https://github.com/q2316367743/es-client"
 edition = "2021"
 rust-version = "1.77.2"
 
