--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22.5.1'
-          cache: 'yarn'
-      - run: yarn
+          cache: 'pnpm'
+      - run: pnpm install
 
-      - run: yarn build:chrome
-      - run: yarn build:edge
-      - run: yarn build:firefox
+      - run: pnpm build:chrome
+      - run: pnpm build:edge
+      - run: pnpm build:firefox
 
       - run: zip -r chrome-extension.zip src-chrome/
       - run: zip -r edge-extension.zip src-edge/
