--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 8
+          run_install: false
 
       - uses: actions/setup-node@v4
         with:
